--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "react-toastify": "^10.0.5",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
