--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
     "@mui/styles": "^5.16.6",
+    "@mui/x-data-grid": "^7.12.0",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.3",
     "react": "^18.3.1",
@@ -23,6 +24,7 @@
     "react-hook-form": "^7.52.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
+    "react-toastify": "^10.0.5",
     "redux-toolkit": "^1.1.2",
     "yup": "^1.4.0"
   },
